Make forum comments with fixed table layout to avoid overflowing comments.

--- a/django/shrubbery/shrubbery/static/scss/generic.scss
+++ b/django/shrubbery/shrubbery/static/scss/generic.scss
@@ -68,3 +68,7 @@ img {
 .form-switch *{
     cursor: pointer;
 }
+
+.fixed-table {
+    table-layout: fixed;
+}
